@@ -19,7 +19,7 @@
 	      <td>Name</td>
 	      <td><INPUT type="text" name="name" size="40"></td>
 	    </tr><tr>
-	      <td>My URL <i>(optional)</i>&nbsp;</td>
+	      <td>Web address <i>(optional)</i>&nbsp;</td>
 	      <td><INPUT type="text" name="url" size="40"></td>
 	    </tr><tr>
 	      <td style="vertical-align: top">Trip privacy</td>
