@@ -1,3 +1,9 @@
+<b>2008-12-14</b>
+
+* Clear flights after adding them in Basic mode
+* Show "Saving..." while AJAX operations are pending
+* Bug: Erase "current" flight from map when exiting Basic mode
+
 <b>2008-12-13</b>
 
 * Introduce "Basic" multi-flight adding tool
